# yak

./: .travis.yml  README.md
nbv_planner/: package.xml
nbv_planner/launch/: auto_explore.launch  octomap_mapping.launch
nbv_planner/src/: exploration_controller_node.cpp  nbv_planner_node.cpp
yak/: CMakeLists.txt  package.xml
yak/launch/: launch_ensenso.launch  launch_sim.launch  launch_xtion.launch  yak.launch  yak_meshing.launch
yak/src/: kinfu.cpp
yak/src/ros/: kinfu_server.cpp  volume_tf_broadcaster.cpp
yak_meshing/: package.xml
