<?xml version="1.0"?>
<package format="2">
  <name>yak_meshing</name>
  <version>0.0.0</version>
  <description>The yak_meshing package</description>

  <maintainer email="jschornak@todo.todo">jschornak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>yak</depend>

  <export>
  </export>

</package>
